--- a/index.html
+++ b/index.html
@@ -175,7 +175,9 @@
         <a href="velko.html" class="vobox-link">
           <div class="vobox">
             <h2 data-key="home.wholesale">velkoobchod</h2>
-            <h4 data-key="home.wholesaleSubtitle">Homefield jako B2B partner</h4>
+            <h4 data-key="home.wholesaleSubtitle">
+              Homefield jako B2B partner
+            </h4>
             <p data-key="home.wholesaleLink">zjistěte více o spolupráci</p>
           </div>
         </a>
@@ -281,9 +283,8 @@
       <p data-key="footer.createdBy">vytvořeno www.imfejm.cz</p>
     </div>
 
-    <script src="i18n.js"></script>
-    <script src="index.js"></script>
-    script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
-<script src="js/index.js" defer></script>
+    <script src="i18n.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+    <script src="js/index.js" defer></script>
   </body>
 </html>
