--- a/index.html
+++ b/index.html
@@ -285,6 +285,6 @@
 
     <script src="i18n.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
-    <script src="js/index.js" defer></script>
+    <script src="index.js" defer></script>
   </body>
 </html>
