--- a/velko.html
+++ b/velko.html
@@ -144,9 +144,7 @@
             style="display: none"
           />
 
-          <!-- Google reCAPTCHA
-          <div class="g-recaptcha" data-sitekey="6LflQfUqAAAAAHuzyq7V4_oIHP8KkLWQZyZRMY_o"></div>
-          -->
+          
           <button type="submit" data-key="contact.send">odeslat</button>
         </div>
       </form>
@@ -157,7 +155,8 @@
       </p>
       <p data-key="footer.createdBy">vytvořeno www.imfejm.cz</p>
     </div>
-    <script src="i18n.js"></script>
-    <script src="velko.js"></script>
+    <script src="i18n.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+    <script src="index.js" defer></script>
   </body>
 </html>
