--- a/velko.html
+++ b/velko.html
@@ -157,6 +157,6 @@
     </div>
     <script src="i18n.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
-    <script src="index.js" defer></script>
+    <script src="velko.js" defer></script>
   </body>
 </html>
