edge edit forms

--- a/velko.html
+++ b/velko.html
@@ -144,7 +144,6 @@
             style="display: none"
           />
 
-          
           <button type="submit" data-key="contact.send">odeslat</button>
         </div>
       </form>
@@ -156,7 +155,7 @@
       <p data-key="footer.createdBy">vytvořeno www.imfejm.cz</p>
     </div>
     <script src="i18n.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
     <script src="velko.js" defer></script>
   </body>
 </html>
