--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
     </div>
 
     <script src="i18n.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
     <script src="index.js" defer></script>
   </body>
 </html>
