another version emailjs html

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
       <p data-key="footer.copyright">
         © 2025 Homefield s r.o. Všechna práva vyhrazena.
       </p>
-      <p data-key="footer.createdBy">vytvořeno www.imfejm.cz</p>
+      <p data-key="footer.createdBy">vytvořeno <a href="https://www.imfejm.cz" target="_blank" rel="noopener noreferrer">www.imfejm.cz</a></p>
     </div>
 
     <script src="i18n.js" defer></script>
