--- a/velko.html
+++ b/velko.html
@@ -73,7 +73,7 @@
         <span data-key="velko.resultText"></span>
       </p>
     </div>
-    <p data-key="velko.offerHeading">co nabízíme:</p>
+    <p data-key="velko.offerHeading" class="nabizime">co nabízíme:</p>
     <div class="nabidka">
       <div class="off1">
         <div class="offers">
