--- a/index.html
+++ b/index.html
@@ -117,6 +117,22 @@
       <div class="eko-wrapper">
         <div class="eko">
           <div class="front">
+            <img
+              src="img/eco1201.jpg"
+              srcset="
+                img/eco800.jpg   800w,
+                img/eco1201.jpg 1201w,
+                img/eco2968.jpg 2968w
+              "
+              sizes="
+    (max-width: 800px) 100vw,
+    1350px
+  "
+              alt="Eco kolekce Homefield"
+              class="hero-image"
+              loading="eager"
+              fetchpriority="high"
+            />
             <h2 data-key="home.sustainabilityHeading">udržitelnost</h2>
             <img
               src="img/sipka.svg"
@@ -146,6 +162,14 @@
       <div class="styl-wrapper">
         <div class="styl">
           <div class="front">
+            <img
+              src="img/ksilt1200.jpg"
+              srcset="img/ksilt1200.jpg 1200w, img/ksilt3000.jpg 3000w"
+              sizes="(max-width: 800px) 100vw, 1350px"
+              alt="Kšilt Homefield"
+              class="hero-image"
+            />
+
             <h2 data-key="home.styleHeading">styl</h2>
             <img
               src="img/sipka.svg"
@@ -280,7 +304,15 @@
       <p data-key="footer.copyright">
         © 2025 Homefield s r.o. Všechna práva vyhrazena.
       </p>
-      <p data-key="footer.createdBy">vytvořeno <a href="https://www.imfejm.cz" target="_blank" rel="noopener noreferrer">www.imfejm.cz</a></p>
+      <p data-key="footer.createdBy">
+        vytvořeno
+        <a
+          href="https://www.imfejm.cz"
+          target="_blank"
+          rel="noopener noreferrer"
+          >www.imfejm.cz</a
+        >
+      </p>
     </div>
 
     <script src="i18n.js" defer></script>
