--- a/velko.html
+++ b/velko.html
@@ -10,6 +10,25 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="velko.css" />
+     <link rel="icon" href="/img/favicon/favicon.ico" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/img/favicon/favicon-32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/img/favicon/favicon-16.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/img/favicon/apple-touch-icon.png"
+    />
+    <meta name="theme-color" content="#ffffff" />
     <title>HOMEFIELD</title>
   </head>
   <body>
