text vobox mobox edit

--- a/index.html
+++ b/index.html
@@ -152,8 +152,11 @@
               Při výrobě využíváme co nejvyšší podíl
               <strong>evropských surovin</strong> — od bavlněného kepru až po
               viskózový brokát. Tyto materiály jsou obnovitelné, snadno dostupné
-              a zaručují stabilní kvalitu i dodávky. Již dnes využíváme recyklované materiály a jejich podíl ve výrobě průběžně navyšujeme. Upřednostňujeme <strong>krátké dopravní trasy</strong>,
-              minimální odpad a dlouhou životnost produktu.
+              a zaručují stabilní kvalitu i dodávky. Již dnes využíváme
+              recyklované materiály a jejich podíl ve výrobě průběžně
+              navyšujeme. Upřednostňujeme
+              <strong>krátké dopravní trasy</strong>, minimální odpad a dlouhou
+              životnost produktu.
             </p>
           </div>
         </div>
@@ -202,13 +205,13 @@
             <h4 data-key="home.wholesaleSubtitle">
               Homefield jako B2B partner
             </h4>
-            <p data-key="home.wholesaleLink">zjistěte více o spolupráci</p>
+            <p data-key="home.wholesaleLink">zjistit více o spolupráci</p>
           </div>
         </a>
         <div class="mobox">
           <h2 data-key="home.retail">maloobchod</h2>
           <h4 data-key="home.retailSubtitle">Signature kolekce</h4>
-          <p data-key="home.retailLink">navštivte e-shop</p>
+          <p data-key="home.retailLink">navštívit e-shop</p>
         </div>
       </div>
 
